# type-inference-rank2

./: .gitignore  LICENSE  README.md  type-inference-rank2.cabal
slides/: .gitignore  Makefile  content.tex  main.tex
src/: ASUP.hs  KWInference.hs  Main.hs  Term.hs  ThetaReduction.hs  Type.hs  TypeError.hs  VarEnvironment.hs
tests/: TestASUP.hs  TestMain.hs  TestTerm.hs  TestTheta.hs
